--- a/leaflet/assets/css/index.css
+++ b/leaflet/assets/css/index.css
@@ -1,33 +1,75 @@
-.indexTopo{
+.mapa{
+  height: 80vh;
+}
+
+.rodape{
   height: 15vh;
-  background-color: blue;
-}
-
-.indexMeio{
-  height: 60vh;
-  background-color: yellow;
-}
-
-.indexRodape{
-  height: 20vh;
   display: flex;
   align-items: center;
   justify-content: center;
+  padding: auto;
 }
 
 .competicao{
-  height: 18vh;
-  width: 18vh;
+  height: 90%;
+  width: 90%;
   width: auto;
   margin: auto;
+  cursor: pointer;
 }
 
+.indexConteudo{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+}
 
-.mapa {
+.indexInfo{
+  width: 50%;
+  height: 100%;
+  background-color: yellow;
+}
+
+.indexMundo{
+  width: 50%;
+  height: 100%;
+  background-color: blue;
+}
+
+/* CSS configurando o SVG */
+.mundo {
   height: 95vh;
   background-image: url("../img/mundo.svg");
   background-size: 100% 100%;
   -o-background-size: 100% 100%;
   -webkit-background-size: 100% 100%;
   background-size: cover;
+}
+
+svg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 1%;
+    height: auto;
+    width: auto;
+    max-width: 100%;
+    max-height: 100%;
+}
+
+.land:hover{
+  cursor: pointer;
+}
+
+.land{
+  fill: #666;
+  fill-opacity: 1;
+  stroke:white;
+  stroke-opacity: 1;
+  stroke-width:0.5;
+}
+
+.land:hover{
+  fill: orange;
 }
